# hashgoblin

./: Cargo.toml
src/: error.rs  hashing.rs  lib.rs  main.rs  path.rs
src/exec/: checker.rs  handlers.rs  mod.rs  mtreader.rs  outfile.rs  streader.rs
