[package]
name = "hashgoblin"
version = "0.1.1"
edition = "2021"

[dependencies]
digest = "0.10.7"
gumdrop = "0.8.1"
hex = "0.4.3"
md-5 = "0.10.6"
rustc-hash = "2.1.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
tiger = "0.2.1"
whirlpool = "0.10.4"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59.0", features = ["Win32", "Win32_Security", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl"] }
